deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: example
        image: example:${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    app: example
  ports:
  - port: 80
    targetPort: 80
