ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - rancher.lumicast.com
  rules:
  - host: rancher.lumicast.com
    http:
      paths:
      - path: /
        backend:
          serviceName: example-svc
          servicePort: 80
